--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,5 +1,10 @@
 .logo-container {
+    width: 100%;
+    height: 256px;
     margin-top: 50px;
     text-align: center;
     margin-bottom: 20px;
+    background: url('./job.png');
+    background-position: center;
+    background-repeat: no-repeat;
 }
